# RAFACODEphi

./: .gitignore  1.md  BUILDING.md  CMakeLists.txt  DOC_INDEX.md  Makefile  PROJECT_STATE.md  README.md  VECTRAS_MEGAPROMPT_DOCS.md  build.gradle
.ci/: sensitive-allowlist.txt
.github/workflows/: android-build-manual.yml  android-minimal-debug.yml  android-multiabi3.yml  android-verified.yml  android.yml  ci.yml  engine-ci.yml  pipeline-orchestrator.yml  proof-build.yml  rafcode-phi-baremetal-ci.yml  termux-orchestrator.yml  zipdrop.yml
_incoming/: readme.md
addthis/: readme.md
app/: build.gradle
app/src/main/cpp/: CMakeLists.txt  lowlevel_bridge.c  vectra_core_accel.c  vectra_lowlevel_backend_x86_64.c
bug/: 1_RAFAELIA_BITRAF64_KERNEL.md  2_DETERMINISTIC_COHERENCE_MATRIX.md  3_ZIP_DETERMINISTIC_CONTAINER.md  4_GEOMETRIC_PARITY_REDUNDANCY.md  5_OMEGA_SME_COMPRESSION_CODEC.md  FILES_MAP.md  README.md  readme.md
bug/core/: vectra_cpu_safe.c  zipraf_core_bridge.c  zipraf_jni.c
bug/issues/: ISSUE_FILEUTILS_BACKEND_MODE_AND_ISO_READONLY.md  ISSUE_MAINVNCACTIVITY_DISPATCHKEYEVENT_IME_COMPOSITION.md  ISSUE_TERMINALROW_COMBINING_LIMIT_AND_UNASSIGNED_WIDTH.md
docs/: BUILD_ENV_ALIGNMENT.md  ESFERAS_METODOLOGICAS_RAFAELIA.md  FULLSTACK_SOURCE_MAP.md  IMAGES_INDEX.md  LEGAL_AND_LICENSES.md  README.md  ROOT_FILES_CATALOG.md  SECURITY.md  VM_SUPERVISION_NEXT_5_STEPS.md
reports/: build-verification-2026-04-03-fix.md  external-dependency-hotspots.md
shell-loader/: build.gradle
terminal-emulator/: build.gradle
tools/: FILES_MAP.md  check_overlay_zip_duplicates.sh  check_sensitive_artifacts.sh  dependency_hotspots.py  verify_bootstrap_assets.py
(+152 files in other folders)
